Admin GUI improvements

--- a/templates/ajax/admin/changelogs/changelogs.html.twig
+++ b/templates/ajax/admin/changelogs/changelogs.html.twig
@@ -3,6 +3,7 @@
     {{parent()}}
     <li class="back-dash" x-ajax-href="{{ url('game_landing') }}">{{ 'Zum Spiel'|trans({},'global') }}</li>
 {% endblock %}
+{% block title %}{{ 'Zukunft'|trans({}, 'admin') }}{% endblock %}
 {% block ajax %}
     <div class="row">
         <div class="cell rw-12">
