--- a/templates/ajax/admin/reports/reports.html.twig
+++ b/templates/ajax/admin/reports/reports.html.twig
@@ -1,4 +1,9 @@
 {% extends "ajax/ajax.html.twig" %}
+{% block menu_text %}
+    {{parent()}}
+    <li class="back-dash" x-ajax-href="{{ url('game_landing') }}">{{ 'Zum Spiel'|trans({},'global') }}</li>
+{% endblock %}
+{% block title %}{{ 'Foren-Mod.'|trans({}, 'admin') }}{% endblock %}
 {% block ajax %}
     <div class="row">
 
