--- a/templates/ajax/admin/towns/old_town_explorer.html.twig
+++ b/templates/ajax/admin/towns/old_town_explorer.html.twig
@@ -1,5 +1,9 @@
 {% extends "ajax/ajax.html.twig" %}
 {% block title %}{{'Stadt {townname}'|trans({'{townname}': town.name}, 'admin')}}{% endblock %}
+{% block menu_text %}
+    {{parent()}}
+    <li class="back-dash" x-ajax-href="{{ url('game_landing') }}">{{ 'Zum Spiel'|trans({},'global') }}</li>
+{% endblock %}
 {% block ajax %}
     {% macro valuelist(prop,val) %}
         <div class="row">
