--- a/templates/web/framework.html.twig
+++ b/templates/web/framework.html.twig
@@ -170,6 +170,7 @@
                 {{ include('scripts/errors/actions.txt.twig') }}
                 {{ include('scripts/errors/forum.txt.twig') }}
                 {{ include('scripts/errors/ghost.txt.twig') }}
+                {{ include('scripts/errors/messages.txt.twig') }}
             },
             'langs': {
                 'de': '{{ 'Deutsch'|trans({},'global') }}',
