--- a/templates/ajax/game/town/routes.html.twig
+++ b/templates/ajax/game/town/routes.html.twig
@@ -38,39 +38,25 @@
             {% endif %}
         </div>
         <div class="padded cell rw-6 rw-lg-12">
-            {% embed "ajax/game/map.html.twig" with {'default_zoom': 0, 'default_show_zone': false, 'allow_zone_view': false, 'in_town': true, 'map': map_data, 'chaos': town.chaos} %}
-            {% endembed %}
+            <div id="preview-map" x-react-mount="map" x-react-data="{{ map_public_json }}"></div>
         </div>
     </div>
 {% endblock %}
 {% block js %}
     {{ parent() }}
     <script>
-        {% embed "scripts/map.js.twig" with {'map': map_data} %}{% endembed %}
-
         if ($.client.get('current', 'routes') !== null) {
             let route = document.querySelector('div.routes-list [x-route-id="' + $.client.get('current', 'routes') +'"]');
             if(route) route.classList.add("me");
         }
 
-        for (let i = 0; i < scroll_areas.length; i++) {
-            let scroll_area = scroll_areas[i];
-            let map_area = scroll_area.parentNode;
-            let map = map_area.parentNode;
-
-            let route_selectors = document.querySelectorAll('div.routes-list [x-route-id]');
-            for (let i = 0; i < route_selectors.length; i++)
-                route_selectors[i].addEventListener('click', function () {
-                    const old_route = $.client.get('current', 'routes');
-                    const new_route = old_route === route_selectors[i].getAttribute('x-route-id') ? null : route_selectors[i].getAttribute('x-route-id');
-                    activate_route(map, '#b4da4c', new_route);
-                    $.client.set('current', 'routes', new_route, false);
-                    if (old_route !== null)
-                        document.querySelector('div.routes-list [x-route-id].me').classList.remove("me");
-                    if(new_route !== null)
-                        route_selectors[i].classList.add('me');
-                });
-        }
+        $.html.addEventListenerAll('[x-route-id]', 'click', (e,elem) => {
+            $.components.dispatchEvent('preview-map', 'select-route', {route: parseInt(elem.getAttribute('x-route-id'))});
+        })
+        $.components.attachEventListener('preview-map', 'route-selected', e => {
+            $.html.forEach('[x-route-id]', elem => elem.classList.remove('me'));
+            if (e.route) $.html.forEach('[x-route-id="' + e.route + '"]', elem => elem.classList.add('me'));
+        });
 
         let deletebtn = document.querySelectorAll(".delete_exp");
         for (let i = 0; i < deletebtn.length; i++)
