--- a/assets/less/modules/map.less
+++ b/assets/less/modules/map.less
@@ -687,7 +687,8 @@ div.react_map_area {
     };
 
     &>.scroll-plane {
-      position: absolute; display: block; top: 0; left: 0; width: 100%; height: 100%; z-index: 1; padding: 5px;
+      position: absolute; display: block; top: 0; left: 0; width: auto; height: auto; z-index: 1; padding: 5px;
+      &.auto-size { width: 100%; height: 100%; }
       &>.svg {
         position: absolute; top: 0; left: 0; width: 100%; height: 100%; padding: 5px; pointer-events: none; z-index: 3;
         &>svg { width: 100%; height: 100%; transform: scale(1,-1); }
@@ -704,6 +705,7 @@ div.react_map_area {
           &.active { &:before { outline: 2px solid #b4da4c; } }
 
           &:hover { outline-color: #a4af80; }
+          &>* {pointer-events: none}
         };
         &>.zone {
 
