--- a/templates/ajax/soul/settings.html.twig
+++ b/templates/ajax/soul/settings.html.twig
@@ -372,7 +372,7 @@
                             <button id="acc_unremember_me">{{ 'Auf allen Browsern & Geräten abmelden'|trans({},'soul') }}</button>
                             <p class="small">{% trans from 'soul' %}Hiermit kannst du dich von allen Geräten und Browsern abmelden, auf denen du aktuell eingeloggt bist. Die "Login merken" Funktion wird hierdurch ebenfalls auf den betroffenen Geräten deaktiviert.{% endtrans %}</p>
                             {% if is_granted('ROLE_ETERNAL') %}
-                                <div class="note note-warning">{{ 'Denke daran, dich ebenfalls aus deinem EternalTwin Account auszuloggen!' }}</div>
+                                <div class="note note-warning">{{ 'Denke daran, dich ebenfalls aus deinem EternalTwin Account auszuloggen!'|trans({},'soul') }}</div>
                             {% endif %}
                         </div>
                     </div>
